# ppt-to-txt

./: .gitignore  Dockerfile  LICENSE  README.md  agents.py  compose.yml  gemini_summary.py  main.py  ppt_to_image.py  pyproject.toml  slide_summary.py
tests/: ppt_pdf_test.py  test.sh
